--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "16.x"
   },
   "dependencies": {
+    "aws-sdk": "^2.1135.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
@@ -18,6 +19,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone-uploader": "^2.11.0",
+    "react-player": "^2.10.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0",
