added scrollability to the comments list.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Autosize",
         "fullwidth",
         "maxheight",
-        "maxwidth"
+        "maxwidth",
+        "scrollbars"
     ]
 }
